--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta property="og:title" content="Purple Pixel Portfolio" />
+	
+		<meta
+		  property="og:description"
+		  content="A Cute Purple Based Pixel Theme Portfolio Website
+		  "
+		/>
+	
+		<meta property="og:image" content="https://i.pinimg.com/originals/bd/d3/36/bdd3360a05b0c02cc9cc766a73bc75fc.gif"/>
+	
+		<meta name="theme-color" content="#2596be" />
 	</head>
 	<body class="is-preload">
 
@@ -17,7 +28,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter" class="icon brands fa-discord"><span>Discord</span></a>
+						<a href="https://discord.gg/7DtdqpWQfw" class="icon brands fa-discord"><span>Discord</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -31,7 +42,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="https://data.whicdn.com/images/277289949/original.gif" alt="" />
+									<img src="https://64.media.tumblr.com/9652e3136173ae79bbc337d22019cd6a/fb5d0db1147578e9-6d/s1280x1920/38913970b839b8c847d958dd585e9049ee352fd9.gif" alt="" />
 								</a>
 							</article>
 
@@ -40,11 +51,9 @@
 								<header>
 									<h2>Work</h2>
 								</header>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
+								<h3>
+									I will add it later , Probably not Right <now class=""></now>
+								</h3>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
@@ -64,24 +73,6 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
