--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 		<meta property="og:image" content="https://i.pinimg.com/originals/bd/d3/36/bdd3360a05b0c02cc9cc766a73bc75fc.gif"/>
 	
-		<meta name="theme-color" content="#2596be" />
+		<meta name="theme-color" content="#a348d9" />
 	</head>
 	<body class="is-preload">
 
